--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,30 +1,25 @@
 status = error
 name = PropertiesConfig
-
-#Make sure to change log file path as per your need
 property.filename = /Users/massimodelvecchio/cooldriver/log.out
 
 filters = threshold
-
 filter.threshold.type = ThresholdFilter
 filter.threshold.level = debug
-
-appenders = rolling
 
 appender.rolling.type = RollingFile
 appender.rolling.name = RollingFile
 appender.rolling.fileName = ${filename}
-appender.rolling.filePattern = debug-backup-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.rolling.filePattern = target/rolling2/test1-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
 appender.rolling.layout.type = PatternLayout
-appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+appender.rolling.layout.pattern = %d %p %C{1.} [%t] %m%n
 appender.rolling.policies.type = Policies
 appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
-appender.rolling.policies.time.interval = 1
+appender.rolling.policies.time.interval = 2
 appender.rolling.policies.time.modulate = true
 appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
-appender.rolling.policies.size.size=10MB
+appender.rolling.policies.size.size=100MB
 appender.rolling.strategy.type = DefaultRolloverStrategy
-appender.rolling.strategy.max = 20
+appender.rolling.strategy.max = 5
 
 loggers = rolling
 
@@ -32,5 +27,5 @@ loggers = rolling
 
 logger.rolling.name = org.maxmcold
 logger.rolling.level = debug
-logger.rolling.additivity = false
+logger.rolling.additivity = true
 logger.rolling.appenderRef.rolling.ref = RollingFile
