--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -9,23 +9,18 @@ filter.threshold.level = debug
 appender.rolling.type = RollingFile
 appender.rolling.name = RollingFile
 appender.rolling.fileName = ${filename}
-appender.rolling.filePattern = target/rolling2/test1-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.rolling.filePattern = target/rolling/log-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
 appender.rolling.layout.type = PatternLayout
 appender.rolling.layout.pattern = %d %p %C{1.} [%t] %m%n
 appender.rolling.policies.type = Policies
-appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
-appender.rolling.policies.time.interval = 2
-appender.rolling.policies.time.modulate = true
 appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
-appender.rolling.policies.size.size=100MB
+appender.rolling.policies.size.size=10MB
 appender.rolling.strategy.type = DefaultRolloverStrategy
 appender.rolling.strategy.max = 5
 
 loggers = rolling
-
-#Make sure to change the package structure as per your application
-
 logger.rolling.name = org.maxmcold
 logger.rolling.level = debug
-logger.rolling.additivity = true
+logger.rolling.additivity = false
 logger.rolling.appenderRef.rolling.ref = RollingFile
+logger.rolling.append = true
