Completed fileInputReader for all types of inputs

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,6 +1,11 @@
-status = error
+status = info
 name = PropertiesConfig
-property.filename = /Users/massimodelvecchio/cooldriver/log.out
+property.filename = ./logs/log.out
+
+# Root logger
+rootLogger.level=trace
+rootLogger.appenderRef.console.ref=RollingFile
+
 
 filters = threshold
 filter.threshold.type = ThresholdFilter
