Completed fileInputReader for all types of inputs

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,8 +1,10 @@
 
 #Overll configuration
+house.name = sannicola
+house.description = stocazzo
 currentConfig = base
-base.controller.activeSensors = tem,hum
-
+base.controller.activeSensors = tem,hum,wst,sun,awn
+rule.config.file = ./rules/rule.configuration.yml
 
 temperature.field.name = temperature
 humidity.field.name = humidity
