Created first working item (Boiler)

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 
-#Overll configuration
+#Overall configuration
 house.name = sannicola
 house.description = stocazzo
 currentConfig = base
@@ -37,9 +37,16 @@ sensor.windowstatus.controller.status = off
 sensor.windowstatus.stream.type = file
 sensor.windowstatus.stream.type.file.name = ./in/wstat.txt
 
+
 sensor.sun.controller.status = off
 sensor.sunposition.stream.type = file
 sensor.sunposition.stream.type.file.name = ./in/sun.txt
+
+item.boiler.write.type = file
+item.boiler.file.name = ./out/boiler.txt
+
+item.window.write.type = file
+item.window.file.name = ./out/window.txt
 
 
 
