--- a/rules/rule.configuration.yml
+++ b/rules/rule.configuration.yml
@@ -3,4 +3,4 @@ code: 1
 description: when temp is under 20 and boiler is off then switch on boiler
 name: setBoiler
 areas: sala, room1, room2, room3
-action: WHEN ${readable.windowstatus.value} = 0 AND ${readable.temperature.value} < 20 AND ${readable.windowstatus.value} = 0 AND ${readable.temperature.value} > 8 THEN ${action.boiler->switchOn}
+action: WHEN ${readable.sunposition.value} = 0 AND ${readable.windowstatus.value} = 0 AND ${readable.temperature.value} < 20 AND ${readable.windowstatus.value} = 0 AND ${readable.temperature.value} > 8 THEN ${item.boiler->setStatus(ON)} AND ${item.window.setPosition(32)}
