Completed and simple tested boiler action on rule (ON/OFF)

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,48 +5,57 @@ house.description = stocazzo
 currentConfig = base
 base.controller.activeSensors = tem,hum,wst,sun,awn
 rule.config.file = ./rules/rule.configuration.yml
+read.interval = 5
 
+#This field name is used below in sensor configuration -> be sure not to mismatch them
 temperature.field.name = temperature
 humidity.field.name = humidity
 awnings.field.name = awnings
 sun.field.name = sunposition
 windowstatus.field.name = windowstatus
+boiler.field.name = boiler
 
 temperature.code.name = tem
 humidity.code.name = hum
 awnings.code.name = awn
 windowstatus.code.name = wst
 sun.code.name = sun
+boiler.code.name = bol
 
-#Defines input stream types and attributes
+#Sensor configurations
+#Defines input/output stream types and attributes
 #So far only file implemented with *.file.name property
 
 sensor.temperature.controller.status = on
 sensor.temperature.stream.type = file
-sensor.temperature.stream.type.file.name = ./in/temp.txt
+sensor.temperature.stream.type.uri.name = ./in/temp.txt
 
 sensor.humidity.controller.status = on
 sensor.humidity.stream.type = file
-sensor.humidity.stream.type.file.name = ./in/humid.txt
+sensor.humidity.stream.type.uri.name = ./in/humid.txt
 
 sensor.awnings.controller.status = off
 sensor.awnings.stream.type = file
-sensor.awnings.stream.type.file.name = ./in/awning.txt
+sensor.awnings.stream.type.uri.name = ./in/awning.txt
 
 sensor.windowstatus.controller.status = off
 sensor.windowstatus.stream.type = file
-sensor.windowstatus.stream.type.file.name = ./in/wstat.txt
+sensor.windowstatus.stream.type.uri.name = ./in/wstat.txt
 
 
 sensor.sun.controller.status = off
 sensor.sunposition.stream.type = file
-sensor.sunposition.stream.type.file.name = ./in/sun.txt
+sensor.sunposition.stream.type.uri.name = ./in/sun.txt
+
+sensor.boiler.stream.type = file
+sensor.boiler.stream.type.uri.name = ./in/boilerstat.txt
+
 
 item.boiler.write.type = file
-item.boiler.file.name = ./out/boiler.txt
+item.boiler.filewriter.file.name = ./out/boiler.txt
 
 item.window.write.type = file
-item.window.file.name = ./out/window.txt
+item.window.filewriter.file.name = ./out/window.txt
 
 
 
